# spice-tracker-bot-tma

./: .coverage  .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPOSITS_SYSTEM.md  Dockerfile  LOGGING.md  MIGRATION_SUMMARY.md  README.md  alembic.ini  bot.py  database.js  database.py  database_orm.py  debug_connection.py  env.example  file:memdb1  fix_connection.py  fly.toml  index.js  initial_sync.py  migrate.py  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  requirements.txt  run_tests.py  setup_database.py  spice_tracker.db  test_bot.py  test_connection.py  test_database.py  test_expedition.py
.claude/: settings.json
.github/: dependabot.yml  issue_template.md
.github/workflows/: ci.yml  railway-deploy.yml
alembic/: env.py
commands/: __init__.py  backfill.py  calc.py  calculate_sand.py  conversion.py  dbsync.py  deposit_sand.py  expedition.py  fixedratecut.py  guild.py  guild_treasury.py  guild_withdraw.py  harvest.py  help.py  landsraad.py  leaderboard.js  leaderboard.py  ledger.py  logsolo.js  myrefines.js  pay.py  payment.py  payroll.py  pending.py  perms.py  refinery.py  reset.py  resetstats.js  sand.py  setrate.js  settings.py  split.py  treasury.py  water.py
supabase/: README.md  config.toml  seed.sql  setup.ps1  setup.sh
supabase/migrations/: 20240101000000_initial_schema.sql  (+8 more)
tests/: __init__.py  conftest.py  test_basic.py  test_command_discovery.py  test_commands.py  test_database_robustness.py  test_dbsync_command.py  test_discord_interactions.py  test_error_scenarios.py  test_guild_commands.py  test_integration.py  test_landsraad_bonus.py  test_leaderboard_command.py  test_ledger.py  test_ledger_command.py  test_new_features.py  test_orm_database.py  test_pay_command.py  test_payroll_command.py  test_pending_command.py  test_permissions.py  test_perms_command.py  test_refinery_command.py  test_reset_command.py  test_sand_command.py  test_settings_commands.py  test_split_command.py  test_utils.py
utils/: base_command.py  command_utils.py  database_utils.py  decorators.py  embed_builder.py  embed_utils.py  helpers.py  logger.py  pagination_utils.py  permissions.js  permissions.py  rateLimiter.js  rate_limiter.py
views/: __init__.py  confirm_view.py
(+6 files in other folders)
