[project]
name = "spice-tracker-bot"
version = "0.1.0"
description = "Spice Tracker Bot for Telegram Mini App"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.2",
    "python-dotenv>=1.1.1",
    "supabase>=2.0.0",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | migrations
  # files
  | __pycache__
)/
'''
