[project]
name = "spice-tracker-bot-tma"
version = "0.1.0"
description = "Spice Tracker Discord Bot"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.6.2",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "requests>=2.31.0",
    "alembic>=1.16.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | migrations
  # files
  | __pycache__
)/
'''
